[gd_scene load_steps=8 format=2]

[ext_resource path="res://SharedAssets/flame.png" type="Texture" id=1]
[ext_resource path="res://Obstacles/Flame.gd" type="Script" id=2]

[sub_resource type="Gradient" id=2]
offsets = PoolRealArray( 0, 0.696296 )
colors = PoolColorArray( 0.901961, 0.282353, 0.180392, 1, 0.956863, 0.705882, 0.105882, 1 )

[sub_resource type="GradientTexture" id=3]
gradient = SubResource( 2 )

[sub_resource type="ParticlesMaterial" id=1]
emission_shape = 1
emission_sphere_radius = 4.0
flag_disable_z = true
direction = Vector3( 0, -1, 0 )
spread = 32.0
gravity = Vector3( 0, 0, 0 )
initial_velocity = 16.0
initial_velocity_random = 0.4
orbit_velocity = 0.0
orbit_velocity_random = 0.0
scale = 3.0
scale_random = 0.77
color_ramp = SubResource( 3 )

[sub_resource type="RectangleShape2D" id=4]
extents = Vector2( 4, 6 )

[sub_resource type="RectangleShape2D" id=5]
extents = Vector2( 3, 5 )

[node name="Flame" type="KinematicBody2D"]
collision_layer = 4
script = ExtResource( 2 )

[node name="Sprite" type="Sprite" parent="."]
scale = Vector2( -1, 1 )
texture = ExtResource( 1 )

[node name="Particles" type="Particles2D" parent="."]
show_behind_parent = true
position = Vector2( 0, 1 )
process_material = SubResource( 1 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource( 4 )

[node name="PlayerDetect" type="Area2D" parent="."]
collision_layer = 0
collision_mask = 3

[node name="CollisionShape2D" type="CollisionShape2D" parent="PlayerDetect"]
position = Vector2( 0, 1 )
shape = SubResource( 5 )

[node name="DeathTimer" type="Timer" parent="."]
wait_time = 2.0
one_shot = true

[node name="LifeTimer" type="Timer" parent="."]
wait_time = 4.0
one_shot = true
[connection signal="body_entered" from="PlayerDetect" to="." method="_on_PlayerDetect_body_entered"]
[connection signal="timeout" from="DeathTimer" to="." method="_on_DeathTimer_timeout"]
[connection signal="timeout" from="LifeTimer" to="." method="_on_LifeTimer_timeout"]
